# open_zoom

./: .gitignore  CHANGELOG.md  CLA.md  CMakeLists.txt  CMakePresets.json  COMMERCIAL.md  LICENSE  README.md  TODO.md  agents.md  chatgpt_future_readme.txt
assets/: openzoom.rc  openzoom_resources.qrc
cmake/: CMakeLists.txt  CMakePresets.json  ProjectOptions.cmake
docs/: README.md  ROADMAP.md  THIRD_PARTY_LICENSES.md  ai_upscaling_todo.md  chatgpt_future_readme.txt  code_reference.md  hardcoded_paths.md  progress.md  rotation_ui_notes.md  ui_modes_design.md  ui_redesign_spec.md
improvement_ideas/: 01-stability-threading.md  02-architecture-app-decomposition.md  03-performance-gpu-cpu.md  04-accessibility-ux.md  05-robustness-validation.md  06-build-tooling-docs.md  07-text-clarity-plan.md  08-ml-text-sr-options.md  09-maxine-superres-plan.md  10-vendor-independent-gpu.md  11-hardening-refactor-plan.md  12-color-picker-redesign.md  13-handoff-batches-bcd.md  14-stabilization-v2.md  15-aspect-safe-high-refresh-viewport.md  16-review-findings-2026-07-23.md  17-project-rename-plan.md  README.md  verified-non-issues.md
include/openzoom/: app.hpp  cuda_interop.hpp  cuda_kernels.hpp
include/openzoom/app/: app.hpp  assistive_feature_manager.hpp  color_schemes.hpp  constants.hpp  interaction_controller.hpp  pipeline_orchestrator.hpp  recording_manager.hpp  settings_controller.hpp  settings_store.hpp  setup_assistant.hpp  suspend_guard.hpp  ui_state_manager.hpp
include/openzoom/capture/: README.md  media_capture.hpp
include/openzoom/common/: README.md  assistive_runtime.hpp  codex_app_server_client.hpp  frame_pipeline.hpp  image_processing.hpp  maxine_superres.hpp  media_writer.hpp  view_transform.hpp
include/openzoom/cuda/: cuda_interop.hpp  cuda_kernels.hpp
include/openzoom/d3d12/: README.md  presenter.hpp
include/openzoom/ui/: README.md  ai_settings_dialog.hpp  assistive_overlay.hpp  color_scheme_picker.hpp  joystick_overlay.hpp  main_window.hpp  render_widget.hpp  responsive_slider_row.hpp  wheel_safe_combo_box.hpp
sandbox/dx12_cuda_minimal/: CMakeLists.txt  main.cpp  minimal_kernel.cu
scripts/: build_and_run.bat  build_release_bundle.bat  run_minimal_test.bat
src/: app.cpp  cuda_interop.cpp  cuda_kernels.cu  main.cpp
src/app/: app.cpp  app_assistant.cpp  app_bootstrap.cpp  app_controls.cpp  app_interaction.cpp  app_internal.hpp  app_pipeline_runtime.cpp  app_settings.cpp  assistive_feature_manager.cpp  color_schemes.cpp  interaction_controller.cpp  main.cpp  pipeline_orchestrator.cpp  recording_manager.cpp  settings_controller.cpp  settings_store.cpp  setup_assistant.cpp  ui_state_manager.cpp
src/capture/: README.md  media_capture.cpp
src/common/: README.md  assistive_runtime.cpp  codex_app_server_client.cpp  frame_pipeline.cpp  image_processing.cpp  maxine_superres.cpp  media_writer.cpp  view_transform.cpp
src/cuda/: cuda_interop.cpp  cuda_kernels.cu
src/d3d12/: README.md  presenter.cpp
src/ui/: README.md  ai_settings_dialog.cpp  assistive_overlay.cpp  color_scheme_picker.cpp  joystick_overlay.cpp  main_window.cpp  render_widget.cpp  responsive_slider_row.cpp
tests/: CMakeLists.txt  README.md  settings_store_tests.cpp  view_transform_tests.cpp
