set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

include(ProjectOptions.cmake)

# Enable CUDA if requested
if (OPENZOOM_ENABLE_CUDA)
    enable_language(CUDA)
    set(CMAKE_CUDA_STANDARD 17)
    set(CMAKE_CUDA_STANDARD_REQUIRED ON)
else()
    message(STATUS "OPENZOOM_ENABLE_CUDA=OFF: building without CUDA support")
endif()

file(GLOB_RECURSE OPENZOOM_CPP_SOURCES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/src/*.cpp)
if (OPENZOOM_ENABLE_CUDA)
    file(GLOB_RECURSE OPENZOOM_CUDA_SOURCES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/src/*.cu)
endif()

add_executable(open_zoom ${OPENZOOM_CPP_SOURCES})

if (OPENZOOM_ENABLE_CUDA)
    target_sources(open_zoom PRIVATE ${OPENZOOM_CUDA_SOURCES})
    set_target_properties(open_zoom PROPERTIES
        CUDA_SEPARABLE_COMPILATION ON
        CUDA_RUNTIME_LIBRARY Static
        CUDA_ARCHITECTURES "75;86;89"
    )
endif()

target_sources(open_zoom PRIVATE
    ${PROJECT_SOURCE_DIR}/include/openzoom/app/app.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/app/assistive_feature_manager.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/app/color_schemes.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/app/constants.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/app/interaction_controller.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/app/pipeline_orchestrator.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/app/recording_manager.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/app/settings_controller.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/app/settings_store.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/app/suspend_guard.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/app/ui_state_manager.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/capture/media_capture.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/common/image_processing.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/common/frame_pipeline.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/common/media_writer.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/common/maxine_superres.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/common/view_transform.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/common/assistive_runtime.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/common/codex_app_server_client.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/d3d12/presenter.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/ui/main_window.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/ui/assistive_overlay.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/ui/joystick_overlay.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/ui/render_widget.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/ui/color_scheme_picker.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/ui/responsive_slider_row.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/ui/wheel_safe_combo_box.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/ui/ai_settings_dialog.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/app/setup_assistant.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/cuda/cuda_interop.hpp
    ${PROJECT_SOURCE_DIR}/include/openzoom/cuda/cuda_kernels.hpp
)

target_include_directories(open_zoom PRIVATE
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/third_party/maxine/Maxine-VFX-SDK/nvvfx/include
)
set_target_properties(open_zoom PROPERTIES
    VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_BINARY_DIR}"
)

target_compile_definitions(open_zoom PRIVATE
    OPENZOOM_ENABLE_CUDA=$<BOOL:${OPENZOOM_ENABLE_CUDA}>
    OPENZOOM_HAS_CUDA_EXT_MEMORY=$<IF:$<BOOL:${OPENZOOM_ENABLE_CUDA}>,1,0>
    OPENZOOM_ENABLE_TEXT_SR=$<BOOL:${OPENZOOM_ENABLE_TEXT_SR}>
)

if (WIN32)
    target_sources(open_zoom PRIVATE
        ${PROJECT_SOURCE_DIR}/assets/openzoom.rc
        ${PROJECT_SOURCE_DIR}/assets/openzoom_resources.qrc
    )

    find_package(Qt6 REQUIRED COMPONENTS Widgets Network)

    # Optional text-to-speech support (Qt TextToSpeech module).
    find_package(Qt6 QUIET COMPONENTS TextToSpeech)
    if (Qt6TextToSpeech_FOUND)
        target_link_libraries(open_zoom PRIVATE Qt6::TextToSpeech)
        target_compile_definitions(open_zoom PRIVATE OPENZOOM_HAS_TTS=1)
    endif()

    if (OPENZOOM_ENABLE_CUDA)
        find_package(CUDAToolkit REQUIRED)
        target_link_libraries(open_zoom PRIVATE CUDA::cudart_static CUDA::cuda_driver)
    endif()

    target_link_libraries(open_zoom PRIVATE
        Qt6::Widgets
        Qt6::Network
        d3d12
        dxgi
        mfplat
        mfreadwrite
        mfuuid
        dxguid
        d3dcompiler
        ole32
        mf
        shlwapi
        uuid
        Synchronization
        windowscodecs
        comctl32
    )

    target_compile_definitions(open_zoom PRIVATE NOMINMAX WIN32_LEAN_AND_MEAN UNICODE _UNICODE)

    if (OPENZOOM_ENABLE_CUDA)
        set(SANDBOX_DIR ${PROJECT_SOURCE_DIR}/sandbox/dx12_cuda_minimal)
        if (EXISTS "${SANDBOX_DIR}/CMakeLists.txt")
            add_subdirectory(${SANDBOX_DIR} ${CMAKE_BINARY_DIR}/sandbox_dx12_cuda_minimal)
        endif()
    endif()
else()
    message(WARNING "OpenZoom is intended to be built on Windows with CUDA, Qt6, and Direct3D12 support.")
endif()

if (OPENZOOM_ENABLE_TESTS)
    if (EXISTS "${PROJECT_SOURCE_DIR}/tests/CMakeLists.txt")
        add_subdirectory(${PROJECT_SOURCE_DIR}/tests ${CMAKE_BINARY_DIR}/tests)
    else()
        message(WARNING "OPENZOOM_ENABLE_TESTS=ON, but no tests/CMakeLists.txt exists yet.")
    endif()
endif()
